# dfnn-face

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dfnn_face/: Circle.ipynb - BORRAR  Damero.ipynb  __about__.py  circle_dataset.py  circle_web.py  damero_dataset.py  damero_qt.py  damero_test_data.pickle  damero_train_data.pickle  damero_web.py  requirements.txt  tst.py
src/dfnn_face/.ipynb_checkpoints/: Damero-checkpoint.ipynb  circle-checkpoint.ipynb
src/dfnn_face/datasets/: circle_test_data.pickle  circle_test_data_r_circle=0.6.pickle  circle_test_data_r_circle=0.75.pickle  circle_test_data_r_circle_0.5.pickle  circle_train_data.pickle  circle_train_data_r_circle=0.75.pickle  circle_train_data_r_circle_0.5.pickle  circle_train_data_r_circle_0.6.pickle
src/dfnn_face/face/: face_torch.py  gface_torch.py
src/dfnn_face/models/: circle_inputs_2_hidden_[16, 14]_epochs_7500_seed_29_lr_0.001.pth  circle_inputs_2_hidden_[4, 3]_epochs_7500_seed_132312_lr_0.0005.pth  circle_inputs_2_hidden_[4, 4]_epochs_10000_seed_11_lr_0.001_r_circle_0.5.pth  circle_inputs_2_hidden_[4, 4]_epochs_10000_seed_132_lr_0.001.pth  circle_inputs_2_hidden_[4, 4]_epochs_10000_seed_1_lr_0.001_r_circle_0.5.pth  circle_inputs_2_hidden_[4, 4]_epochs_10000_seed_291_lr_0.001_r_circle_0.5.pth  circle_inputs_2_hidden_[4, 4]_epochs_10000_seed_29_lr_0.001.pth  circle_inputs_2_hidden_[4, 4]_epochs_10000_seed_29_lr_0.001_r_circle_0.6.pth  circle_inputs_2_hidden_[4, 4]_epochs_10000_seed_3_lr_0.001_r_circle_0.5.pth  circle_inputs_2_hidden_[4, 4]_epochs_5000_seed_13111_lr_0.001.pth  circle_inputs_2_hidden_[4, 4]_epochs_5000_seed_13112_lr_0.01.pth  circle_inputs_2_hidden_[4, 4]_epochs_5000_seed_1313_lr_0.001.pth  circle_inputs_2_hidden_[4, 4]_epochs_5000_seed_13_lr_0.01.pth  (+13 more)
src/dfnn_face/utils/: face_torch.py  (+5 more)
(+41 files in other folders)
